iptables/clearos_iptables
# Generated by iptables-save v1.4.21 on Tue Sep 15 18:28:53 2020
*nat
:PREROUTING ACCEPT [20:1962]
:INPUT ACCEPT [9:540]
:OUTPUT ACCEPT [5:332]
:POSTROUTING ACCEPT [2:138]
-A POSTROUTING -o tun+ -j ACCEPT
-A POSTROUTING -o enp0s3 -j MASQUERADE
-A POSTROUTING -o enp0s8 -j MASQUERADE
COMMIT
# Completed on Tue Sep 15 18:28:53 2020
# Generated by iptables-save v1.4.21 on Tue Sep 15 18:28:53 2020
*mangle
:PREROUTING ACCEPT [367:91226]
:INPUT ACCEPT [367:91226]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [253:546122]
:POSTROUTING ACCEPT [253:546122]
:MULTIWAN_MARK - [0:0]
:MULTIWAN_RESTORE - [0:0]
:MULTIWAN_enp0s3 - [0:0]
:MULTIWAN_enp0s8 - [0:0]
-A PREROUTING -i enp0s9 -m state --state NEW -j MULTIWAN_MARK
-A PREROUTING -i enp0s9 -m state --state RELATED,ESTABLISHED -j MULTIWAN_RESTORE
-A FORWARD -o ppp+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i enp0s3 -j CONNMARK --set-xmark 0x8000/0xffffffff
-A FORWARD -i enp0s8 -j CONNMARK --set-xmark 0x8001/0xffffffff
-A POSTROUTING -o enp0s3 -j CONNMARK --set-xmark 0x8000/0xffffffff
-A POSTROUTING -o enp0s8 -j CONNMARK --set-xmark 0x8001/0xffffffff
-A MULTIWAN_RESTORE -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A MULTIWAN_enp0s3 -j MARK --set-xmark 0x8000/0xffffffff
-A MULTIWAN_enp0s8 -j MARK --set-xmark 0x8001/0xffffffff
COMMIT
# Completed on Tue Sep 15 18:28:53 2020
# Generated by iptables-save v1.4.21 on Tue Sep 15 18:28:53 2020
*filter
:INPUT DROP [11:1422]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:DROP-lan - [0:0]
-A INPUT -m state --state INVALID -j DROP
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK SYN,ACK -m state --state NEW -j REJECT --reject-with tcp-reset
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -s 127.0.0.0/8 -i enp0s3 -j DROP
-A INPUT -s 127.0.0.0/8 -i enp0s8 -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -i pptp+ -j ACCEPT
-A INPUT -i tun+ -j ACCEPT
-A INPUT -i enp0s9 -j ACCEPT
-A INPUT -i enp0s3 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -i enp0s3 -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -i enp0s3 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -i enp0s3 -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -i enp0s3 -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -i enp0s3 -p tcp -m tcp --sport 67 --dport 68 -j ACCEPT
-A INPUT -i enp0s8 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -i enp0s8 -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -i enp0s8 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -i enp0s8 -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -i enp0s8 -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -i enp0s8 -p tcp -m tcp --sport 67 --dport 68 -j ACCEPT
-A INPUT -d 192.168.0.22/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 10.0.3.15/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 192.168.0.22/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -d 10.0.3.15/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -i enp0s3 -p udp -m udp --dport 1024:65535 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i enp0s3 -p tcp -m tcp --dport 1024:65535 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i enp0s8 -p udp -m udp --dport 1024:65535 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i enp0s8 -p tcp -m tcp --dport 1024:65535 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i pptp+ -j ACCEPT
-A FORWARD -i tun+ -j ACCEPT
-A FORWARD -i enp0s9 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o pptp+ -j ACCEPT
-A OUTPUT -o tun+ -j ACCEPT
-A OUTPUT -o enp0s9 -j ACCEPT
-A OUTPUT -o enp0s3 -p icmp -j ACCEPT
-A OUTPUT -o enp0s3 -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp -m tcp --sport 68 --dport 67 -j ACCEPT
-A OUTPUT -o enp0s8 -p icmp -j ACCEPT
-A OUTPUT -o enp0s8 -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A OUTPUT -o enp0s8 -p tcp -m tcp --sport 68 --dport 67 -j ACCEPT
-A OUTPUT -s 192.168.0.22/32 -o enp0s3 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -s 10.0.3.15/32 -o enp0s8 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -s 192.168.0.22/32 -o enp0s3 -p tcp -m tcp --sport 81 -j ACCEPT
-A OUTPUT -s 10.0.3.15/32 -o enp0s8 -p tcp -m tcp --sport 81 -j ACCEPT
-A OUTPUT -o enp0s3 -j ACCEPT
-A OUTPUT -o enp0s8 -j ACCEPT
-A DROP-lan -j DROP
COMMIT
# Completed on Tue Sep 15 18:28:53 2020
